--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,23 +20,27 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_i18n:
+  intl:
+  intl_translation:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
+  #google_maps_flutter: ^0.5.21+15
+  google_map_location_picker: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -45,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/i18n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
