--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^0.13.0+1
   #google_maps_flutter: ^0.5.21+15
   google_map_location_picker: ^3.1.0
+  uuid: ^2.0.4
 
 dev_dependencies:
   flutter_test:
