--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,11 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
-  #google_maps_flutter: ^0.5.21+15
+  google_maps_flutter: any
+  google_maps_webservice: ^0.0.14
+  flutter_google_places: 
+    path: ./flutter_google_maps_places/flutter_google_places-0.2.3/
+  location: ^2.3.5
   google_map_location_picker: ^3.1.0
   uuid: ^2.0.4
 
